paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/compound_literals_7/sample_003/target.compile.log
error[E0658]: use of unstable library feature `rustc_private`: this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/compound_literals_7/sample_003/target.rs:2:1
  |
2 | extern crate lazy_static;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: see issue #27812 <https://github.com/rust-lang/rust/issues/27812> for more information
  = help: add `#![feature(rustc_private)]` to the crate attributes to enable
  = note: this compiler was built on 2025-09-09; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `rustc_private`: this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/compound_literals_7/sample_003/target.rs:12:1
   |
12 | / lazy_static! {
13 | |     static ref ENDLESS_ZEROS: Rc<IntList> = Rc::new_cyclic(|weak| IntList {
14 | |         car: 0,
15 | |         cdr: weak.clone(),
16 | |     });
17 | | }
   | |_^
   |
   = note: see issue #27812 <https://github.com/rust-lang/rust/issues/27812> for more information
   = help: add `#![feature(rustc_private)]` to the crate attributes to enable
   = note: this compiler was built on 2025-09-09; consider upgrading it if it is out of date
   = note: this error originates in the macro `__lazy_static_internal` which comes from the expansion of the macro `lazy_static` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: use of unstable library feature `rustc_private`: this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/compound_literals_7/sample_003/target.rs:12:1
   |
12 | / lazy_static! {
13 | |     static ref ENDLESS_ZEROS: Rc<IntList> = Rc::new_cyclic(|weak| IntList {
14 | |         car: 0,
15 | |         cdr: weak.clone(),
16 | |     });
17 | | }
   | |_^
   |
   = note: see issue #27812 <https://github.com/rust-lang/rust/issues/27812> for more information
   = help: add `#![feature(rustc_private)]` to the crate attributes to enable
   = note: this compiler was built on 2025-09-09; consider upgrading it if it is out of date
   = note: this error originates in the macro `__lazy_static_create` which comes from the expansion of the macro `lazy_static` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: use of unstable library feature `rustc_private`: this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/compound_literals_7/sample_003/target.rs:12:1
   |
12 | / lazy_static! {
13 | |     static ref ENDLESS_ZEROS: Rc<IntList> = Rc::new_cyclic(|weak| IntList {
14 | |         car: 0,
15 | |         cdr: weak.clone(),
16 | |     });
17 | | }
   | |_^
   |
   = note: see issue #27812 <https://github.com/rust-lang/rust/issues/27812> for more information
   = help: add `#![feature(rustc_private)]` to the crate attributes to enable
   = note: this compiler was built on 2025-09-09; consider upgrading it if it is out of date
   = note: this error originates in the macro `__lazy_static_create` which comes from the expansion of the macro `lazy_static` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: use of unstable library feature `rustc_private`: this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/compound_literals_7/sample_003/target.rs:12:1
   |
12 | / lazy_static! {
13 | |     static ref ENDLESS_ZEROS: Rc<IntList> = Rc::new_cyclic(|weak| IntList {
14 | |         car: 0,
15 | |         cdr: weak.clone(),
16 | |     });
17 | | }
   | |_^
   |
   = note: see issue #27812 <https://github.com/rust-lang/rust/issues/27812> for more information
   = help: add `#![feature(rustc_private)]` to the crate attributes to enable
   = note: this compiler was built on 2025-09-09; consider upgrading it if it is out of date
   = note: this error originates in the macro `__lazy_static_internal` which comes from the expansion of the macro `lazy_static` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: use of unstable library feature `rustc_private`: this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/compound_literals_7/sample_003/target.rs:12:1
   |
12 | / lazy_static! {
13 | |     static ref ENDLESS_ZEROS: Rc<IntList> = Rc::new_cyclic(|weak| IntList {
14 | |         car: 0,
15 | |         cdr: weak.clone(),
16 | |     });
17 | | }
   | |_^
   |
   = note: see issue #27812 <https://github.com/rust-lang/rust/issues/27812> for more information
   = help: add `#![feature(rustc_private)]` to the crate attributes to enable
   = note: this compiler was built on 2025-09-09; consider upgrading it if it is out of date
   = note: this error originates in the macro `__lazy_static_internal` which comes from the expansion of the macro `lazy_static` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `Rc<IntList>` cannot be shared between threads safely
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/compound_literals_7/sample_003/target.rs:12:1
   |
12 | / lazy_static! {
13 | |     static ref ENDLESS_ZEROS: Rc<IntList> = Rc::new_cyclic(|weak| IntList {
14 | |         car: 0,
15 | |         cdr: weak.clone(),
16 | |     });
17 | | }
   | |_^ `Rc<IntList>` cannot be shared between threads safely
   |
   = help: the trait `Sync` is not implemented for `Rc<IntList>`
note: required by a bound in `Lazy`
  --> /rust/deps/lazy_static-1.5.0/src/inline_lazy.rs:19:1
   = note: this error originates in the macro `__lazy_static_create` which comes from the expansion of the macro `lazy_static` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: use of unstable library feature `rustc_private`: this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/compound_literals_7/sample_003/target.rs:12:1
   |
12 | / lazy_static! {
13 | |     static ref ENDLESS_ZEROS: Rc<IntList> = Rc::new_cyclic(|weak| IntList {
14 | |         car: 0,
15 | |         cdr: weak.clone(),
16 | |     });
17 | | }
   | |_^
   |
   = note: see issue #27812 <https://github.com/rust-lang/rust/issues/27812> for more information
   = help: add `#![feature(rustc_private)]` to the crate attributes to enable
   = note: this compiler was built on 2025-09-09; consider upgrading it if it is out of date
   = note: this error originates in the macro `__lazy_static_create` which comes from the expansion of the macro `lazy_static` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0369]: binary operation `!=` cannot be applied to type `Option<&Rc<IntList>>`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/compound_literals_7/sample_003/target.rs:23:33
   |
23 |     if x.cdr.upgrade().as_ref() != Some(x) {
   |        ------------------------ ^^ ------- Option<&Rc<IntList>>
   |        |
   |        Option<&Rc<IntList>>
   |
note: an implementation of `PartialEq` might be missing for `IntList`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/compound_literals_7/sample_003/target.rs:7:1
   |
 7 | struct IntList {
   | ^^^^^^^^^^^^^^ must implement `PartialEq`
help: consider annotating `IntList` with `#[derive(PartialEq)]`
   |
 7 + #[derive(PartialEq)]
 8 | struct IntList {
   |

error[E0369]: binary operation `!=` cannot be applied to type `Option<&Rc<IntList>>`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/compound_literals_7/sample_003/target.rs:26:56
   |
26 |     if x.cdr.upgrade().unwrap().cdr.upgrade().as_ref() != Some(x) {
   |        ----------------------------------------------- ^^ ------- Option<&Rc<IntList>>
   |        |
   |        Option<&Rc<IntList>>
   |
note: an implementation of `PartialEq` might be missing for `IntList`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/compound_literals_7/sample_003/target.rs:7:1
   |
 7 | struct IntList {
   | ^^^^^^^^^^^^^^ must implement `PartialEq`
help: consider annotating `IntList` with `#[derive(PartialEq)]`
   |
 7 + #[derive(PartialEq)]
 8 | struct IntList {
   |

error: aborting due to 10 previous errors

Some errors have detailed explanations: E0277, E0369, E0658.
For more information about an error, try `rustc --explain E0277`.